[package]
name = "token"
version = "0.1.0"
authors = ["Concordium <developers@concordium.com>"]
edition = "2021"
license = "MPL-2.0"

[features]
default = ["std", "bump_alloc"]
std = ["concordium-std/std", "concordium-cis2/std"]
bump_alloc = ["concordium-std/bump_alloc"]

[dependencies]
concordium-std = {version="10.1.0", default-features = false}
concordium-cis2 = {version="6.2.0", default-features = false}

[dev-dependencies]
concordium-smart-contract-testing = { version="4.3.0" }

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1
